--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.6",
-    "ejs-electron": "^2.1.1"
+    "ejs-electron": "^2.1.1",
+    "plist": "^3.0.4"
   },
   "build": {
     "appId": "your.id",
